# foxpatch

./: .gitignore  CLAUDE.md  config.example.yaml  pyproject.toml
src/foxpatch/: __init__.py  __main__.py  claude_runner.py  cli.py  config.py  costs.py  exceptions.py  github_client.py  gitutil.py  issue_worker.py  logging_config.py  models.py  orchestrator.py  prompts.py  review_worker.py  revision_worker.py  state.py  workspace.py
systemd/: foxpatch.service
tests/: conftest.py  test_claude_runner.py  test_config.py  test_costs.py  test_github_client.py  test_issue_worker.py  test_orchestrator.py  test_review_worker.py  test_revision_worker.py  test_state.py  test_workspace.py
tests/fixtures/: claude_output.json  gh_issues_response.json  gh_prs_response.json  sample_config.yaml
